# LawyerGPT

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
OPS/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  nginx.conf
client/: index.html  package-lock.json  package.json  playwright.config.ts
client/e2e/: app.spec.ts
client/src/: App.tsx  index.css
client/src/hooks/: useChat.ts  useConversations.ts  useFileUpload.ts
client/src/services/: api.ts
client/src/types/: index.test.ts  index.ts
docs/: 01-user-flow.md  01-user-flow.mmd  02-ingestion-sequence.md  02-ingestion-sequence.mmd  03-chat-query-sequence.md  03-chat-query-sequence.mmd  04-conversation-management-sequence.md  04-conversation-management-sequence.mmd  architecture.excalidraw  diagrams.md
engine/ingestion/: chunker.py  embedder.py  loader.py  store.py
engine/orchestration/: augmentor.py  generator.py  retriever.py
engine/prompts/: templates.py
server/: lawyergpt.db
server/app/: config.py  main.py
server/app/data/: database.py  models.py
server/app/exceptions/: __init__.py  handlers.py
server/app/routes/: chat.py  conversations.py  documents.py
server/app/schemas/: chat.py  conversation.py  document.py
server/app/services/: chat_service.py  conversation_service.py  document_service.py
tests/: conftest.py
tests/engine/: test_augmentor.py  test_chunker.py  test_templates.py
tests/server/: test_chat.py  test_conversations.py  test_documents.py  test_exceptions.py  test_health.py  test_schemas.py
(+15 files in other folders)
