[project]
name = "lawyergpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "greenlet>=3.5.1",
    "langchain-community>=0.4.2",
    "pypdf>=6.13.0",
    "langchain-openai>=1.2.2",
    "chromadb>=1.5.9",
    "langchain-anthropic>=1.4.4",
]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
